--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Internship project for MetaLamp",
   "private": true,
   "scripts": {
-    "dev": "webpack --mode development"
+    "dev": "webpack --mode development",
+    "watch": "webpack --mode development --watch"
   },
   "keywords": [
     "webpack",
@@ -18,7 +19,9 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.2.1",
     "webpack": "^5.47.1",
     "webpack-cli": "^4.7.2"
   }
