--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "autoprefixer": "^10.3.1",
     "normalize.css": "^8.0.1",
-    "pug": "^3.0.2",
     "sass": "^1.37.2"
   },
   "devDependencies": {
@@ -30,7 +29,9 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
+    "pug": "^2.0.4",
     "pug-html-loader": "^1.1.5",
+    "pug-loader": "^2.4.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.47.1",
